# veronica

./: Cargo.toml  README.md
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  app.css  index.css  typings.ts
dashboard/src/Components/Button/: Button.tsx  button.css
dashboard/src/Components/Header/: Header.tsx  header.css
dashboard/src/Components/Input/: Input.tsx  input.css
dashboard/src/Components/LiveStats/: LiveStats.tsx  liveStats.css
dashboard/src/Components/PreviousResults/: PreviousResults.tsx  previousResults.css
dashboard/src/Components/RunnerInitializeForm/: RunnerInitializeForm.tsx  runnerInitializeForm.css
dashboard/src/Components/TestResult/: TestResult.tsx  testResult.css
dashboard/src/Pages/Home/: Home.tsx
dashboard/src/Pages/NotFound/: NotFound.tsx
dashboard/src/Pages/Runner/: Runner.tsx  runner.css
dashboard/src/hooks/: useInterval.tsx
dashboard/src/redux/: index.ts
dashboard/src/redux/actions/: statsActions.ts
dashboard/src/redux/mutations/: statsMutations.ts
dashboard/src/redux/reducers/: index.ts  statsReducer.ts
dashboard/src/redux/store/: index.ts
dashboard/src/services/: api.ts
src/: client.rs  collector.rs  enums.rs  handlers.rs  main.rs  routes.rs  runner.rs  server.rs  server_state.rs  task.rs  task_manager.rs
test-server/: ac.js  express.js  fastify.js  package-lock.json  package.json
