[package]
name = "veronica"
version = "0.1.0"
authors = ["Ismail"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0" }
actix-rt = "1.0"
serde = "1.0.115"
serde_json = "1.0.57"
lazy_static = "1.4.0"
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
log = "0.4.0"
env_logger = "0.7.1"
